# duron

./: .coverage  .gitignore  Makefile  README.md  flake.nix  main.py  mkdocs.yaml  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml  publish.yaml
docs/: getting-started.md  index.md  reference.md
docs/reference/: codec.md  contrib.md  duron.md  log.md  tracing.md  typing.md
examples/: agent.py  hello_world.py
src/duron/: __init__.py  _loop.py  codec.py  config.py  context.py  event_loop.py  fn.py  job.py  log.py  loop.py  mark.py  ops.py  options.py  signal.py  stream.py  task.py  task_runner.py  typing.py
src/duron/_core/: config.py  context.py  fn.py  invoke.py  job.py  ops.py  options.py  session.py  signal.py  stream.py  stream_manager.py  task_manager.py  utils.py
src/duron/_decorator/: durable.py  effect.py  fn.py  op.py
src/duron/_util/: linked_dict.py
src/duron/codec/: _base.py
src/duron/contrib/: codecs.py  storage.py
src/duron/log/: __init__.py  _entry.py  _helper.py  _storage.py  codec.py  entry.py  storage.py
src/duron/log/storage/: __init__.py  base.py  file.py  simple.py
src/duron/tracing/: __init__.py  _events.py  _span.py  _tracer.py
src/duron/typing/: __init__.py  _hint.py  _inspect.py  hint.py  inspect.py
tests/: test_codec.py  test_error.py  test_hello.py  test_id.py  test_invoke.py  test_job.py  test_log.py  test_loop.py  test_pydantic.py  test_session.py  test_signal.py  test_stream.py  test_task.py  test_trace.py  test_typing.py
tests/utils/: __init__.py
tools/trace-ui/: .prettierrc  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
tools/trace-ui/public/: sample.jsonl
tools/trace-ui/src/: App.tsx  app.tsx  main.tsx
tools/trace-ui/src/components/: file-upload.tsx  theme-provider.tsx
tools/trace-ui/src/components/trace-view/: detail-panel.tsx  index.tsx  span-row.tsx  span-utils.ts  timeline-utils.ts  trace-lanes.tsx  trace-view.tsx
tools/trace-ui/src/components/ui/: button.tsx
tools/trace-ui/src/hooks/: use-theme.ts
tools/trace-ui/src/lib/: trace.ts
trace-ui/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
trace-ui/src/: App.svelte
